--- a/p8105_hw3_lw2883.Rmd
+++ b/p8105_hw3_lw2883.Rmd
@@ -5,8 +5,81 @@ date: "10/6/2020"
 output: github_document
 ---
 
-```{r setup}
+```{r setup, include = FALSE}
 library(tidyverse)
 library(p8105.datasets)
+
+knitr::opts_chunk$set(
+	fig.width = 6, 
+  fig.asp = .6,
+  out.width = "90%"
+)
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+```
+
+## Problem 1
+
+```{r, instacart}
+data("instacart")
+```
+
+This dataset contains `r nrow(instacart)` rows and `r ncol(instacart)` columns. Observations are on the level of items in orders by user. There are user and order variables such as user ID, order ID, order day, and order hour. There are also item variables such as name, aisle, department, and some numeric codes. 
+
+*How many aisles and which aisles are most items from?*
+```{r aisle_num}
+aisle_num =    
+  instacart %>% 
+    count(aisle) %>% 
+    arrange(desc(n)) 
+```
+There are `r aisle_num %>% count()` aisles. Most items are ordered from the Fresh Vegetables, Fresh Fruits, and Packaged Vegetables Fruits aisles.
+
+
+*Plot showing number of items ordered in each aisle (only aisles with more than 10,000 items ordered)*
+```{r, instcart_plot}
+instacart %>% 
+  count(aisle) %>% 
+  filter(n > 10000) %>% 
+  mutate(
+    aisle = factor(aisle),
+    aisle = fct_reorder(aisle, n)
+  ) %>% 
+  ggplot(aes(x = aisle, y = n)) +
+  geom_point() +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
+```
+
+
+*Table showing 3 most popular items in each of these aisles: baking ingredients, dog food care, packaged vegetables fruits*
+```{r, instacart_table_popular}
+instacart %>% 
+  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>% 
+  group_by(aisle) %>% 
+  count(product_name) %>% 
+  mutate(rank = min_rank(desc(n))) %>% 
+  filter(rank < 4) %>% 
+  arrange(aisle, rank) %>% 
+  knitr::kable()
+```
+
+
+*Table showing the mean hour of the day at which Pink Lady Apples vs. Coffee Ice Cream are ordered on each day of the week*
+```{r, apples_icecream_table}
+instacart %>% 
+  filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>%
+  group_by(product_name, order_dow) %>% 
+  summarize(mean_hour = mean(order_hour_of_day)) %>% 
+  pivot_wider(
+    names_from = order_dow,
+    values_from = mean_hour
+  ) 
 ```
 
