--- a/p8105_hw3_lw2883.Rmd
+++ b/p8105_hw3_lw2883.Rmd
@@ -7,6 +7,7 @@ output: github_document
 
 ```{r setup, include = FALSE}
 library(tidyverse)
+library(haven)
 library(p8105.datasets)
 
 knitr::opts_chunk$set(
@@ -31,7 +32,7 @@ scale_fill_discrete = scale_fill_viridis_d
 data("instacart")
 ```
 
-This dataset contains `r nrow(instacart)` rows and `r ncol(instacart)` columns. Observations are on the level of items in orders by user. There are user and order variables such as user ID, order ID, order day, and order hour. There are also item variables such as name, aisle, department, and some numeric codes. 
+This dataset contains **`r nrow(instacart)` rows** and **`r ncol(instacart)` columns**. Observations are on the level of items in orders by user. There are user and order variables such as user ID, order ID, order day, and order hour. There are also item variables such as name, aisle, department, and some numeric codes. 
 
 *How many aisles and which aisles are most items from?*
 ```{r aisle_num}
@@ -40,7 +41,7 @@ aisle_num =
     count(aisle) %>% 
     arrange(desc(n)) 
 ```
-There are `r aisle_num %>% count()` aisles. Most items are ordered from the Fresh Vegetables, Fresh Fruits, and Packaged Vegetables Fruits aisles.
+There are **`r aisle_num %>% count()` aisles**. Most items are ordered from the **Fresh Vegetables, Fresh Fruits, and Packaged Vegetables Fruits aisles**.
 
 
 *Plot showing number of items ordered in each aisle (only aisles with more than 10,000 items ordered)*
@@ -82,4 +83,39 @@ instacart %>%
     values_from = mean_hour
   ) 
 ```
+
+## Problem 2
+
+*Read the accelerometer dataset. Tidy data, create weekday/weekend variable, encode variable classes:*
+```{r accel_df, message = FALSE}
+accel_df =
+  read_csv("./data/accel_data.csv") %>% 
+    janitor::clean_names() %>% 
+    pivot_longer(
+      activity_1:activity_1440,
+      names_to = "minute",
+      names_prefix = "activity_",
+      values_to = "activity_counts") %>% 
+    mutate(
+      minute = as.double(minute),
+      day_type = recode(day, "Saturday" = "weekend", "Sunday" = "weekend", "Monday" = "weekday", "Tuesday" = "weekday", "Wednesday" = "weekday", "Thursday" = "weekday", "Friday" = "weekday")
+      )
+```
+
+This dataset contains data collected from an accelerometer of a 63 year old male with a BMI of 25 and congestive heart failure. Variables included in this dataset are week number, day (including day ID number and type of day), minute, and activity count for each minute of a day. There are **`r nrow(accel_df)` rows** and **`r ncol(accel_df)` columns**. 
+
+
+
+* aggregate across minutes to create total activity variable for each day > grouby (week then day or day id, then aggregate using mean or sum) + summarize // create table with 35 days with total activity count > make easier to read week number rows and day of the week across top // then describe any patterns
+potential problems > use factors to make day of the week in the right order
+* minute xaxis and activity count on yaxis // color to map day of week // scatterplot with geom_line to connect dots // describe patterns
+minute might be character which will turn into factor in graph > so make sure it's numeric
+
+## Problem 3
+* separate to create year, month, day varaibles // make judgement call to see if you think the obs are in reasonable units // count snowfall for most commonly obs values
+* data manipulation then plotting step > 2 panel one for Jan and one for Jul // organize data: groupby (station, year, and month) and summarize (average max temperature) // filter to get Jan + Jul either before or after groupby + summarize // plotting: average max temp for jan 1981,82,83.. (over years) for each station (use facet to get 2 panel) // structure: does it get warmer? are some stations always colder? 
+* 2 panel plot > since they're completely different make 2 different plots then patchwork //contour plot, bin plot, hex plot for first plot // for second plot: filter then use distribution plot (boxplot, violin, ridge) 
+
+
+
 
