--- a/p8105_hw3_lw2883.md
+++ b/p8105_hw3_lw2883.md
@@ -24,8 +24,8 @@ aisle_num =
     arrange(desc(n)) 
 ```
 
-There are **134 aisles**. Most items are ordered from the **Fresh
-Vegetables, Fresh Fruits, and Packaged Vegetables Fruits aisles**.
+There are **134 aisles**. Most items are ordered from the Fresh
+Vegetables, Fresh Fruits, and Packaged Vegetables Fruits aisles.
 
 *Plot showing number of items ordered in each aisle (only aisles with
 more than 10,000 items ordered)*
@@ -120,12 +120,41 @@ included in this dataset are week number, day (including day ID number
 and type of day), minute, and activity count for each minute of a day.
 There are **50400 rows** and **6 columns**.
 
-  - aggregate across minutes to create total activity variable for each
-    day \> grouby (week then day or day id, then aggregate using mean or
-    sum) + summarize // create table with 35 days with total activity
-    count \> make easier to read week number rows and day of the week
-    across top // then describe any patterns potential problems \> use
-    factors to make day of the week in the right order
+*Aggregate across minutes to create total activity over the day and
+create table to show totals*
+
+``` r
+accel_df %>% 
+  group_by(week, day) %>% 
+  summarize(
+    total_activity = sum(activity_counts)
+  ) %>%
+  pivot_wider(
+    names_from = day,
+    values_from = total_activity
+  ) 
+```
+
+    ## `summarise()` regrouping output by 'week' (override with `.groups` argument)
+
+    ## # A tibble: 5 x 8
+    ## # Groups:   week [5]
+    ##    week  Friday  Monday Saturday Sunday Thursday Tuesday Wednesday
+    ##   <dbl>   <dbl>   <dbl>    <dbl>  <dbl>    <dbl>   <dbl>     <dbl>
+    ## 1     1 480543.  78828.   376254 631105  355924. 307094.   340115.
+    ## 2     2 568839  295431    607175 422018  474048  423245    440962 
+    ## 3     3 467420  685910    382928 467052  371230  381507    468869 
+    ## 4     4 154049  409450      1440 260617  340291  319568    434460 
+    ## 5     5 620860  389080      1440 138421  549658  367824    445366
+
+**use factors to make day of the week in the right order**
+
+Looking at the total activity over the days and weeks, we see that for
+the most part total activity count ranges from 300,000 to around
+600,000. What is noticeable is that the last two weekends in the dataset
+have less total activity count than in previous weekends, especially
+Saturday which has significantly less activity count than any other day.
+
   - minute xaxis and activity count on yaxis // color to map day of week
     // scatterplot with geom\_line to connect dots // describe patterns
     minute might be character which will turn into factor in graph \> so
