--- a/p8105_hw3_lw2883.md
+++ b/p8105_hw3_lw2883.md
@@ -125,6 +125,9 @@ create table to show totals*
 
 ``` r
 accel_df %>% 
+  mutate(
+    day = forcats::fct_relevel(day, c("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"))
+    ) %>% 
   group_by(week, day) %>% 
   summarize(
     total_activity = sum(activity_counts)
@@ -132,33 +135,42 @@ accel_df %>%
   pivot_wider(
     names_from = day,
     values_from = total_activity
-  ) 
+  ) %>% view()
 ```
-
-    ## `summarise()` regrouping output by 'week' (override with `.groups` argument)
-
-    ## # A tibble: 5 x 8
-    ## # Groups:   week [5]
-    ##    week  Friday  Monday Saturday Sunday Thursday Tuesday Wednesday
-    ##   <dbl>   <dbl>   <dbl>    <dbl>  <dbl>    <dbl>   <dbl>     <dbl>
-    ## 1     1 480543.  78828.   376254 631105  355924. 307094.   340115.
-    ## 2     2 568839  295431    607175 422018  474048  423245    440962 
-    ## 3     3 467420  685910    382928 467052  371230  381507    468869 
-    ## 4     4 154049  409450      1440 260617  340291  319568    434460 
-    ## 5     5 620860  389080      1440 138421  549658  367824    445366
-
-**use factors to make day of the week in the right order**
 
 Looking at the total activity over the days and weeks, we see that for
 the most part total activity count ranges from 300,000 to around
 600,000. What is noticeable is that the last two weekends in the dataset
 have less total activity count than in previous weekends, especially
-Saturday which has significantly less activity count than any other day.
+Saturday which has significantly less activity count than any other day
+with only 1440 total activity count.
 
-  - minute xaxis and activity count on yaxis // color to map day of week
-    // scatterplot with geom\_line to connect dots // describe patterns
-    minute might be character which will turn into factor in graph \> so
-    make sure it’s numeric
+*Single-panel plot of 24 hour activity count from accelerometer data for
+each day*
+
+``` r
+accel_df %>% 
+  mutate( day = forcats::fct_relevel(day, c("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"))
+    ) %>%
+  ggplot(aes(x = minute, y = activity_counts, color = day)) +
+    geom_point(alpha = .7) +
+    geom_line() +
+    labs(
+      title = "24 Hour Accelerometer Activity",
+      x = "Minute of the Day",
+      y = "Activity Count"
+    )
+```
+
+<img src="p8105_hw3_lw2883_files/figure-gfm/accel_plot-1.png" width="90%" />
+
+This graph shows the accelermeter activity count across the 24 hours of
+a each day. Although it may be a little hard to see, this graph shows us
+that there is the least amount of activity count throughout the night
+which makes sense because they are most likely sleeping/resting during
+this period of time. Additionally, there seems to be a jump in activity
+count right before this period of low activity count during the night.
+Other periods of high activity can be seen during noon on Sundays.
 
 ## Problem 3
 
