--- a/p8105_hw3_lw2883.md
+++ b/p8105_hw3_lw2883.md
@@ -82,17 +82,14 @@ instacart %>%
   pivot_wider(
     names_from = order_dow,
     values_from = mean_hour
-  ) 
+  ) %>% 
+  knitr::kable()
 ```
 
-    ## `summarise()` regrouping output by 'product_name' (override with `.groups` argument)
-
-    ## # A tibble: 2 x 8
-    ## # Groups:   product_name [2]
-    ##   product_name       `0`   `1`   `2`   `3`   `4`   `5`   `6`
-    ##   <chr>            <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>
-    ## 1 Coffee Ice Cream  13.8  14.3  15.4  15.3  15.2  12.3  13.8
-    ## 2 Pink Lady Apples  13.4  11.4  11.7  14.2  11.6  12.8  11.9
+| product\_name    |        0 |        1 |        2 |        3 |        4 |        5 |        6 |
+| :--------------- | -------: | -------: | -------: | -------: | -------: | -------: | -------: |
+| Coffee Ice Cream | 13.77419 | 14.31579 | 15.38095 | 15.31818 | 15.21739 | 12.26316 | 13.83333 |
+| Pink Lady Apples | 13.44118 | 11.36000 | 11.70213 | 14.25000 | 11.55172 | 12.78431 | 11.93750 |
 
 ## Problem 2
 
@@ -135,8 +132,17 @@ accel_df %>%
   pivot_wider(
     names_from = day,
     values_from = total_activity
-  ) %>% view()
+  ) %>% 
+   knitr::kable()
 ```
+
+| week | Sunday |    Monday |  Tuesday | Wednesday | Thursday |   Friday | Saturday |
+| ---: | -----: | --------: | -------: | --------: | -------: | -------: | -------: |
+|    1 | 631105 |  78828.07 | 307094.2 |    340115 | 355923.6 | 480542.6 |   376254 |
+|    2 | 422018 | 295431.00 | 423245.0 |    440962 | 474048.0 | 568839.0 |   607175 |
+|    3 | 467052 | 685910.00 | 381507.0 |    468869 | 371230.0 | 467420.0 |   382928 |
+|    4 | 260617 | 409450.00 | 319568.0 |    434460 | 340291.0 | 154049.0 |     1440 |
+|    5 | 138421 | 389080.00 | 367824.0 |    445366 | 549658.0 | 620860.0 |     1440 |
 
 Looking at the total activity over the days and weeks, we see that for
 the most part total activity count ranges from 300,000 to around
@@ -173,6 +179,19 @@ count right before this period of low activity count during the night.
 Other periods of high activity can be seen during noon on Sundays.
 
 ## Problem 3
+
+*Load the NY NOAA dataset and describe the dataset*
+
+``` r
+data("ny_noaa")
+```
+
+This dataset shows the information from NOAA for the state of New York
+from January 1, 1981 through December 31, 2010. There are **2595176
+observations** and **7 variables**. It contains the variables: ID which
+corresponds to the different weather stations, date of observation,
+precipitation (tenths of mm), snowfall (mm), snow depth (mm), maximum
+temperature (tenths of C) and minimum temperature (tenths of C).
 
   - separate to create year, month, day varaibles // make judgement call
     to see if you think the obs are in reasonable units // count
