Fixed Problem 3 - Part 1

--- a/p8105_hw3_lw2883.md
+++ b/p8105_hw3_lw2883.md
@@ -221,7 +221,8 @@ minimum temperature variables are converted to degrees C. The most
 commonly observed snowfall values are 0 because this dataset contains
 observations throughout the entire year and New York State only
 experiences snow in the winter. Next we have “NA” or missing values as
-the next most common because
+the next most common because many station do not have records for
+snowfall, and third is 25 mm.
 
 *Two-panel plot showing average max temperature in January and July in
 each station across years*
