--- a/p8105_hw3_lw2883.Rmd
+++ b/p8105_hw3_lw2883.Rmd
@@ -171,7 +171,7 @@ snowfall =
     arrange(desc(n)) 
 ```
 
-This dataset now has precipitation converted to mm and the maximum and minimum temperature variables are converted to degrees C. The most commonly observed snowfall values are 0 because this dataset contains observations throughout the entire year and New York State only experiences snow in the winter. Next we have "NA" or missing values as the next most common because 
+This dataset now has precipitation converted to mm and the maximum and minimum temperature variables are converted to degrees C. The most commonly observed snowfall values are 0 because this dataset contains observations throughout the entire year and New York State only experiences snow in the winter. Next we have "NA" or missing values as the next most common because many station do not have records for snowfall, and third is 25 mm.
 
 *Two-panel plot showing average max temperature in January and July in each station across years*
 ```{r, jan_jul_plot, message = FALSE, warning = FALSE}
